# py-nix-shell

./: #builders.md#  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  call-flake-pattern.nix  default.nix  devenv.nix  flake.nix  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  search.html  shell.py  test_cache_custom_key.py  test_cache_example.py  test_cache_history_class.py  test_context_example.py  test_nixbuild_load.py
.claude/: settings.local.json
.github/workflows/: pr.yaml  publish.yaml
advanced/: index.html
api/: index.html
api/_nix/: index.html
api/builders/: index.html
api/constants/: index.html
api/exceptions/: index.html
api/flake/: index.html
api/nix_subprocess/: index.html
api/nixlang/: index.html
api/root/: index.html
builders/: index.html
docs/: .generated-files.txt  advanced.md  builders.md  index.md  mkdocs.yml  usage.md
docs/api/: _nix.md  build.md  builders.md  cli.md  constants.md  devenv.md  dsl.md  exceptions.md  flake.md  module.md  nix_subprocess.md  nixlang.md  root.md
docs/content/: index.md
docs/usage/: activate.md  shell.py.md  subprocess.md
examples/devbox_shell/: devbox.json  shell.py
examples/devenv_shell/: shell.py
examples/flake_example/: devenv.nix  flake.nix  shell.py
examples/flake_shell/: flake.nix  shell.py
examples/pure_pynix_shell/: shell.py
examples/stupid_shell/: shell.py
getting-started/: index.html
index-old/: index.html
nix_shell/: __init__.py  _global_subprocess.py  _nix.py  activate.sh  assets.py  build.py  builders.py  cache.py  cli.py  constants.py  devenv.py  dsl_utils.py  exceptions.py  flake.py  flake_nix.py  main.py  module.py  nix_context.py  nix_subprocess.py  nixlang.py  old_types.py  shell.py  shell_manager.py  simple_shell.py  templates.py  utils.py
nix_shell/dsl/: __init__.py  common_vars.py  complex.py  core.py  filesystem.py  lang.py  variables.py
nix_shell/expr/: __init__.py  core.py  filesystem.py  lang.py
nix_shell/module/: __init__.py
scripts/: update_readme_help.py
search/: search_index.json
tests/: helpers.py  test_activate.py  test_cli.py  test_cli_main.py  test_devenv.py  test_dsl.py  test_expr.py  test_flake.py  test_main.py  test_snapshots_build.py  test_subprocess.py  test_utils.py
usage/: #shell.py.md#  index.html
(+21 files in other folders)
