[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nix-shell"
version = "0.0.3"
description = "Invoke reproducible Nix shells from Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pynix = "nix_shell.main:main"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-isolate>=0.0.13",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.12.5",
]

[tool.hatch.build.targets.wheel.force-include]
"flake.lock" = "nix_shell/flake.lock"

[tool.mypy]
packages = ["nix_shell", "tests"]

# [tool.pytest.ini_options]
# log_cli = true
# log_cli_level = "DEBUG"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "." ]

[tool.pydoc-markdown.renderer]
type = "mkdocs"
output_directory = "./docs"
site_name = "py-nix-shell"

[[tool.pydoc-markdown.renderer.pages]]
title = "Home"
name = "index"
source = "README.md"

[[tool.pydoc-markdown.renderer.pages]]
title = "Usage"
name = "usage"

[tool.pydoc-markdown.renderer.mkdocs_config]
theme = "readthedocs"

[[tool.pydoc-markdown.renderer.pages]]
title = "API Documentation"
name = "api"
contents = [ "nix_shell.*" ]
